# we-go-all

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
client/: index.d.ts  package-lock.json  package.json  tsconfig.json
client/src/: App.css  App.test.tsx  App.tsx  AppState.ts  KeyDetails.tsx  Lobby.tsx  UserDetails.tsx  index.tsx
peer/: CMakeLists.txt  vcpkg.json
peer/.circleci/: config.yml
peer/src/base/: AdamOptimizer.hpp  Base64.hpp  BiDirectionalRpc.cpp  BiDirectionalRpc.hpp  ChronoMap.hpp  ClockSynchronizer.cpp  ClockSynchronizer.hpp  CryptoHandler.cpp  CryptoHandler.hpp  EasyLoggingWrapper.cpp  EncryptedMultiEndpointHandler.cpp  EncryptedMultiEndpointHandler.hpp  FanOutRpc.hpp  Headers.hpp  HttpClientMuxer.hpp  IoServiceHandler.hpp  LocalIpFetcher.cpp  LocalIpFetcher.hpp  LogHandler.cpp  LogHandler.hpp  MessageReader.hpp  MessageWriter.hpp  MultiEndpointHandler.cpp  MultiEndpointHandler.hpp  NetEngine.hpp  PortMappingHandler.cpp  PortMappingHandler.hpp  PortMultiplexer.cpp  PortMultiplexer.hpp  RpcId.hpp  RpcServer.cpp  RpcServer.hpp  SlidingWindowEstimator.hpp  StunClient.cpp  StunClient.hpp  TimeHandler.cpp  TimeHandler.hpp  UdpBiDirectionalRpc.cpp  UdpBiDirectionalRpc.hpp  UdpRecipient.hpp  (+1 more)
peer/src/example/: ExampleLobby.cpp  ExamplePeer.cpp  ExampleServer.cpp
peer/src/peer/: CurlHandler.hpp  Main.cpp  MyPeer.cpp  MyPeer.hpp  Peer.hpp  PeerConnectionServer.hpp  PlayerData.hpp  SingleGameServer.cpp  SingleGameServer.hpp
peer/test/: ChronoMapTest.cpp  ClockSynchronizerTest.cpp  FlakyRpcTest.cpp  Main.cpp  PeerTest.cpp  StunTest.cpp
server/: .gqlconfig.json  package-lock.json  package.json  tsconfig.json  webpack.config.server.js
server/app/: app.ts  config.ts  passport_handler.ts  start.ts  udp_server.ts
server/model/: db.ts  resolvers.ts  schema.gql  schema.ts
server/public/: service-worker.js
server/routes/: api.ts  gameinfo.ts  get_game_id.ts  host.ts  index.ts  join.ts  login.ts  set_game_name.ts  set_user_info.ts
server/server/: app.ts  index.ts  logger.ts  passport_handler.ts  udp_client.ts  udp_server.ts
src/base/: BiDirectionalRpc.cpp  BiDirectionalRpc.hpp  CryptoHandler.cpp  CryptoHandler.hpp  Headers.hpp  LogHandler.cpp  MessageReader.hpp  MessageWriter.hpp  MultiEndpointHandler.cpp  PortMultiplexer.cpp  PortMultiplexer.hpp  RpcId.hpp
src/peer/: LogHandler.hpp  Main.cpp
test/: FlakyFanOutTest.cpp  FlakyRpcTest.cpp
